# rustinpeace

./: .gitignore  README.md  reporte.md
docker/: Dockerfile  docker-compose.yml
rust/: .gitignore  Cargo.toml  build.rs
rust/proto/: mandelbrot.proto
rust/src/: lib.rs
vpn/HUB/: wg0.conf
vpn/PEER/: wg0.conf
vpn/configuraciones_sanitizadas/HUB/: wg0.conf
vpn/configuraciones_sanitizadas/PEER/: wg0.conf
