[package]
name = "mandelbrot_distribuido"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"